# zmk-glovebox

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONVENTIONS.md  DEBUG_TESTING_SUMMARY.md  Dockerfile.moergo  LICENSE  Makefile  README.md  REFACTOR_EXAMPLE.md  TODO.md  corne_glove80_adapted.json  corne_keymap.json  devenv.nix  final-test.toml  final-test.yaml  flake.nix  glovebox-config-backup-20250618-235425.yaml  glovebox-config.yaml  mypy.ini  pyproject.toml  test_import_target.json
.github/workflows/: ci.yml  release.yml
builders/west/: Dockerfile
docs/: README.md  conf.py  config_system_refactoring.md  example-config.yml  gen_ref_pages.py  generic_docker_compiler_usage_guide.md  generic_docker_compiler_zmk_west_workspace_implementation.md  generic_zmk_keyboard_example.yaml  glove80.yaml  glovebox_optimization_plan.md  index.md  index.rst  keymap_file_format.md  multi_method_architecture.md  naming_improvements.md  packaging.md  refactoring_hardcoded_values_removal.md  refactoring_plan.md  refactoring_protocol_validation.md  refactoring_quick_reference.md  refactoring_summary.md  service_layer_improvements.md  technical_debt.md  test_fixtures_refactoring.md  typed_configuration.md
docs/dev/: README.md  firmware-compile-refactoring-plan.md  keymap-parser-architecture.md  metrics_decorators.md  nix.md  packaging.md  shared-cache-coordination.md  testing.md  testing_quick_reference.md
docs/idea/: keyboard_config_development.md
docs/ideas/: layout_command_usage.md
docs/reference/: index.md
docs/technical/: README.md  caching-system.md  zmk-comment-parsing-fix.md
docs/user/: README.md  cli-reference.md  firmware-building.md  firmware-flashing.md  getting-started.md  keyboard-profiles.md  keymap-version-management.md  layout-commands.md  troubleshooting.md  user-configuration.md
examples/: demo_layer_references.py
examples/layouts/: Glorious Engrammer v42-pre-rk.json  Glorious Engrammer v42-rc4 (preview).json  TailorKey Zero v4.2g Bilateral.json  TailorKey Zero v4.2g Bilateral.original.json  glove80_tkz_42g_behaviors.json
glovebox/: __init__.py  behaviors.py  build_json_from_file.py  cli.py  cli_config.py  dtsi_builder.py  file_utils.py  firmware_utility.py  flash.py  json_viewer.py  keymap_utility.py  layout.py  lsblk.py
glovebox/adapters/: __init__.py  compilation_progress_middleware.py  config_file_adapter.py  docker_adapter.py  file_adapter.py  template_adapter.py  usb_adapter.py
glovebox/builders/: __init__.py  template_context_builder.py
glovebox/cli/: README.md  app.py  interceptor.py  workspace_display_utils.py
glovebox/compilation/: __init__.py  artifacts.py  helpers.py  simple_progress.py
glovebox/config/: __init__.py  compile_methods.py  config.yaml  flash_methods.py  include_loader.py  keyboard_config.py  keyboard_profile.py  minimal_compile_config.py  models.py  models.py_  profile.py  profiles.py  resolver.py  schema.py  service_compile_config.py  user_config.py  zmk_behaviors.json
glovebox/core/: __init__.py  errors.py  logging.py  startup_service.py  structlog_config.py  structlog_logger.py  version_check.py  workspace_cache_utils.py
glovebox/firmware/: __init__.py  build_service.py  build_service_legacy.py  method_registry.py  method_selector.py  models.py  options.py  registry_init.py
glovebox/flash/: __init__.py  detect.py  flash_operations.py  lsdev.py  os_adapters.py  service.py  usb.py  usb_monitor.py
glovebox/formatters/: __init__.py  behavior_formatter.py
glovebox/generators/: __init__.py  config_generator.py  dtsi_generator.py  layout_generator.py
glovebox/layout/: __init__.py  ast_processor.py  behavior_analysis.py  behavior_formatter.py  behavior_service.py  component_service.py  display_service.py  firmware_tracker.py  formatting.py  generator.py  kconfig_generator.py  models.py  rich_formatter.py  service.py  template_service.py  utils.py  version_manager.py  zmk_generator.py  zmk_layout_service.py  zmk_layout_service_enhanced.py  zmk_layout_service_fixed.py
glovebox/metrics/: __init__.py  collector.py  context.py  context_extractors.py  decorators.py  models.py  protocols.py  service.py  session_metrics.py  storage.py
glovebox/models/: __init__.py  base.py  behavior.py  build.py  config.py  docker.py  docker_path.py  flash.py  keymap.py  options.py  path.py  results.py
glovebox/moergo/: __init__.py  bookmark_service.py  config.py  history.py  versioning.py
glovebox/protocols/: __init__.py  base_service_protocol.py  behavior_protocols.py  compile_protocols.py  device_detector_protocol.py  docker_adapter_protocol.py  dtsi_generator_protocol.py  file_adapter_protocol.py  firmware_flasher_protocol.py  flash_os_protocol.py  flash_protocols.py  layout_protocols.py  metrics_protocol.py  mount_cache_protocol.py  progress_context_protocol.py  progress_coordinator_protocol.py  usb_adapter_protocol.py
glovebox/services/: __init__.py  base_service.py  behavior_service.py  build_service.py  display_service.py  file_service.py  flash_service.py  keymap_component_service.py  keymap_service.py  layout_display_service.py
glovebox/templates/: default.nix.j2  zmk_keymap.dtsi.j2
glovebox/tui/: README.md  __init__.py  app.py  main.py
keyboards/: corne.yaml  glove80.yaml  glove80_moergo.yaml  glove80_new.yaml  kingston_test.yaml  lily58.yaml  planck.yaml  sofle.yaml
scripts/: README_DEBUG_WSL2.md  cache-from-workspace  cleanup_cache.py  debug-wsl2  debug_wsl2_flash.py  docs.sh  format.sh  generate_base_cache.py  mark-tests.py  setup.sh  test-fast.sh  test-full.sh  test-integration.sh  test-smoke.sh  test_compile_endpoint.py  view-docs.sh
src/: flash.py  json_viewer.py  lsbblk.py
tests/: bench_copy_files.py  bench_copy_protocol.py  conftest.py  conftest_typed.py  test_build_output_filter_middleware.py  test_cli_parameter_decorators.py  test_cli_parameter_factory.py  test_cli_parameter_helpers.py  test_cli_parameter_types.py  test_compilation_progress.py  test_factories.py  test_file_operations_demo.py  test_file_operations_progress.py  test_template_edit_regression_suite.py  test_workspace_cache_progress.py
(+666 files in other folders)
