[project]
name = "glovebox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1.6",
  "pyobjc>=11.0 ; platform_system == 'Darwin'",
  "wmi>=1.5.1 ; platform_system == 'Windows'",
]

[dependency-groups]
dev = []

[project.scripts]
glove80-flash = "glovebox.flash:main"
glove80-keymap = "glovebox.keymap_utility:main"
glove80-keymap-viewer = "glovebox.json_viewer:main"

[build-system]
# requires = ["uv"]
# build-backend = "uv.build"

requires = ["hatchling"]
build-backend = "hatchling.build"
