[project]
name = "glovebox"
dynamic = ["version"]
description = "Comprehensive tool for ZMK keyboard firmware management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1.0",
  "pydantic-settings>=2.9.1",
  "pydantic>=2.11.0",
  "PyYAML>=6.0",
  "rich>=13.3.0",
  "typer-slim>=0.16.0",
  "deepdiff>=8.5.0",
  "jsonpatch>=1.33",
  "keyring>=25.6.0",
  "requests>=2.32.4",
  "tomlkit>=0.13.3",
  "psutil>=7.0.0",
  "types-psutil>=7.0.0.20250601",
  "pyudev>=0.24.0; sys_platform == 'linux'",
  "WMI; sys_platform == 'win32'",
  "diskcache>=5.6.3",
]

[project.scripts]
glovebox = "glovebox.cli:main"

[build-system]
# requires = ["uv"] # Keep hatchling as per original file
# build-backend = "uv.build" # Keep hatchling as per original file

requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "flake8>=7.2.0",
  "mypy>=1.15.0",
  "pre-commit>=4.2.0",
  "pyright>=1.1.401",
  "pytest-cov>=6.1.1",
  "pytest>=8.3.0",
  "ruff>=0.11.0",
  "tox>=4.26.0",
  "types-PyYAML>=6.0.12.12",
  "types-requests>=2.32.4.20250611",
]

[tool.pytest.ini_options]
markers = [
  "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # Pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "PTH", # flake8-use-pathlib
]

ignore = [
  "E501",   # Line too long (handled by formatter)
  "B008",   # Do not perform function calls in argument defaults
  "N806",   # Variable in function should be lowercase (for pandas df, etc)
  "SIM108", # Use ternary operator (sometimes less readable)
  "F401",   # Imported but unused
  "F841",   # Local variable assigned but never used
]

exclude = [
  ".git",
  ".venv",
  "venv",
  "__pycache__",
  "build",
  "dist",
  "*.egg-info",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["glovebox"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["T201"]
"tests/*" = ["N802", "N803"]
# Scripts might need print statements

[tool.mypy]
python_version = "3.11"
show_column_numbers = true
follow_imports = "normal"

# Enable all strict mode flags
strict = true
# The following settings are enabled by --strict:
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_any_unimported = true
warn_unreachable = true

# Optional: customize strict settings for your project needs
# Uncomment these if you need to disable certain strict checks
# disallow_incomplete_defs = false
# disallow_untyped_decorators = false

# No error code exemptions

#
# [[tool.mypy.overrides]]
# module = "rich"
# ignore_missing_imports = true
#
# [[tool.mypy.overrides]]
# module = "rich.console"
# ignore_missing_imports = true
#
# [[tool.mypy.overrides]]
# module = "rich.table"
# ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
# ignore_errors = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "glovebox/_version.py"

[tool.tox]
legacy_tox_ini = """
  [tox]
  envlist = ppy310,y311,py312,py313

  [testenv]
  deps =
      pytest
      pytest-cov
  commands = pytest {posargs}
  """
